# square-test

./: README.md  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/square/: square_number.py
src/square.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_square_number.py
