[metadata]
name = square
description = A package for square numbers
author = Steff Gosling
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10

[options]
packages = 
    square
install_requires =
    requests>=2
python_requires = >=3.8
package_dir =
    =src
zip_safe = no